changes in icons

--- a/index.html
+++ b/index.html
@@ -63,9 +63,14 @@
         <!-- features section -->
         <section class="flex h-[160px] md-[200px] gap-[100px] items-center justify-center  px-[20px] text-[20px]">
             <div class="w-[200px] flex-col"><img class="h-[60px] pl-[60px]" src="./Assets/intellisense.png" alt=""><span class="pl-[50px] pt-[10px]">IntelliSense</span></div>
-            <div class="w-[200px] flex-col"><img class="h-[60px] relative top-[16px] pl-[70px]" src="./Assets/run.png" alt=""><img class="z-[100] relative bottom-[18px] right-[10px] h-[40px] pl-[70px]" src="./Assets/bug.png" alt=""><span class="pl-[34px] relative bottom-[20px]">Run and Debug</span></div>
+            <div class="w-[200px] flex-col mt-[25px] opacity-[0.70]">
+                <!-- <img class="h-[60px] relative top-[16px] pl-[70px]" src="./Assets/run.png" alt="">
+                <img class="z-[100] relative bottom-[18px] right-[10px] h-[40px] pl-[70px]" src="./Assets/bug.png" alt=""> -->
+                <img class="h-[75px] pl-[60px] pb-[20px]" src="./Assets/Run and debug.jpg" alt="">
+                <span class="pl-[34px] relative bottom-[20px]">Run and Debug</span>
+            </div>
             <div class="w-[200px] flex-col"><img class="h-[60px] pl-[70px]" src="./Assets/git.png" alt=""><span class="pl-[50px]">Built-in Git</span> </div>
-            <div class="w-[200px] flex-col"><img class="h-[80px] pl-[60px]" src="./Assets/extension.png" alt=""><span class="pl-[60px] relative bottom-[12px]">Extensions</span></div>
+            <div class="w-[200px] flex-col opacity-[0.60]"><img class="h-[80px] pl-[60px]" src="./Assets/extension.png" alt=""><span class="pl-[60px] relative bottom-[12px]">Extensions</span></div>
         </section>
 
         <!-- slider section -->
